chore: piccole correzioni

--- a/Prima itinere/24-Aprile-2013.md
+++ b/Prima itinere/24-Aprile-2013.md
@@ -1,6 +1,6 @@
 <h2 style="text-align:center">Prova in Itinere del 24 Aprile 2013</h2>
 
-### 1. Definire formalmente il concetto di perfetta sicurezza
+#### 1) Definire formalmente il concetto di perfetta sicurezza
 
 Sia $\mathcal{SE} = (\mathcal{K}, \mathcal{E}, \mathcal{D})$ un cifrario simmetrico. Questo si definisce perfettamente sicuro se e solo se verifica la seguente proprietà: 
 $$
@@ -13,7 +13,7 @@ con $\mathcal{M} = plaintexts,  \mathcal{C} = ciphertexts, \mathcal{K} = chiavi$
 
 In altre parole, presi due messaggi $m_0$ ed $m_1$ qualsiasi dall'insieme di tutti i plaintext validi, la probabilità che la funzione $\mathcal{E}_k$ produca $c$ è la stessa. Questo tipo di sicurezza è garantito dal One Time Pad (OTP).
 
-### 2.  Sia  $\mathcal{SE} = (\mathcal{K}, \mathcal{E}, \mathcal{D})$ un cifrario simmetrico e siano $M, K, C$ gli insiemi dei messaggi, delle chiavi e dei crittotesti, rispettivamente. Si considerino adesso i seguenti insiemi $M = \{1, 2, 3\}$ e $K = \{1, 2, 3\}$ . Supponiamo di voler cifrare un solo messaggio $m \in M$, utilizzando una chiave (random) $k \in K$, come segue  $c = (k · m) \mod{7}$. E’ tale sistema sicuro in senso perfetto? Giustificare la risposta fornita.
+#### 2)  Sia  $\mathcal{SE} = (\mathcal{K}, \mathcal{E}, \mathcal{D})$ un cifrario simmetrico e siano $M, K, C$ gli insiemi dei messaggi, delle chiavi e dei crittotesti, rispettivamente. Si considerino adesso i seguenti insiemi $M = \{1, 2, 3\}$ e $K = \{1, 2, 3\}$ . Supponiamo di voler cifrare un solo messaggio $m \in M$, utilizzando una chiave (random) $k \in K$, come segue  $c = (k · m) \mod{7}$. E’ tale sistema sicuro in senso perfetto? Giustificare la risposta fornita.
 
 Per essere sicuro in senso perfetto, un cifrario deve verificare la seguente proprietà:
 $$
@@ -28,12 +28,12 @@ Pr[\mathcal{E}_k(1) = 1] \ne Pr[\mathcal{E}_k(2) = 1] \\
 \frac{1}{3} \ne 0
 $$
 
-### 3. Supponendo di avere a disposizione le procedure Espandi Chiave, S, Shift Rows e mix cols discusse a lezione (delle quali non è richiesta, in questa sede, la descrizione algoritmica) si descriva dettagliatamente il funzionamento di AES, fornendo, inoltre, lo pseudocodice dell’algoritmo.
+#### 3) Supponendo di avere a disposizione le procedure EspandiChiave, S, ShiftRows e MixCols discusse a lezione (delle quali non è richiesta, in questa sede, la descrizione algoritmica) si descriva dettagliatamente il funzionamento di AES, fornendo, inoltre, lo pseudocodice dell’algoritmo.
 
 ```pseudocode
 AES_k(m):
-	(k0, k1, ... k10) <- EspandiChiave(k) // |ki| = 128
-	s <- m ⊕ k0 // s rappresenta lo stato
+	(k0, k1, ... k10) <- EspandiChiave(k) /* |ki| = 128 */
+	s <- m ⊕ k0 /* s rappresenta lo stato */
 	for j = 1 to 10 do:
 		s <- SBox(s)
 		s <- ShiftRows(s)
@@ -44,11 +44,11 @@ AES_k(m):
 
 L'algoritmo parte con una fase di espansione della chiave, che dai 128 bit (o 192 o 256) della chiave iniziale produce 10 (o 12 o 14) parole con lunghezza 128 bit.
 
-Il messaggio in bytes viene organizzato in una matrice 4 x 4. Successivamente, si eseguono in ordine: uno XOR fra il messaggio e la prima delle chiavi, al risultato viene applicata una trasformazione non lineare con la S-Box e infine la matrice di output viene sottoposta alle operazioni di ShiftRows e MixColumns per "diffondere" la trasformazione su tutti i bytes. 
+Il messaggio in bytes viene organizzato in una matrice 4 x 4. Successivamente, si eseguono in ordine: uno XOR fra il messaggio e la prima delle chiavi, al risultato viene applicata una trasformazione non lineare con la S-Box e infine la matrice di output viene sottoposta alle operazioni di ShiftRows e MixCols per "diffondere" la trasformazione su tutti i bytes. 
 
-Questa sequenza di operazioni viene ripetuta per tutte le chiavi prodotte dall'EspandiChiave, anche se generalmente l'ultima passata ignora il MixColumns, che non influirebbe sulla sicurezza dell'output.
+Questa sequenza di operazioni viene ripetuta per tutte le chiavi prodotte dall'EspandiChiave, anche se generalmente l'ultima passata ignora il MixCols, che non influirebbe sulla sicurezza dell'output.
 
-### 4. Definire formalmente il concetto di funzione pseudocasuale sicura
+#### 4) Definire formalmente il concetto di funzione pseudocasuale sicura
 
 Una funzione pseudocasuale è considerata sicura se il suo comportamento è indistinguibile da quello di una vera funzione casuale. 
 
@@ -74,7 +74,7 @@ Si tratta del valore assoluto della probabilità che A abbia ragione pensando di
 
 Le due funzioni sono indistinguibili, e quindi la funzione pseudocasuale è sicusa se $ADV(A)$ è una quantità trascurabile.
 
-### 5. Sia $F : \{0, 1\}^k \times \{0, 1\}^l \rightarrow \{0, 1\}^l$ una funzione pseudocasuale sicura. Siano inoltre $\alpha,\beta \in \{0, 1\}^l$  due stringhe di bit note. Vogliamo utilizzare F per costruire una funzione $G : \{0, 1\}^k \times \{0, 1\}^{2l} \rightarrow \{0, 1\}^l$ , nel seguente modo (il simbolo || denota l’operazione di concatenazione): 
+#### 5) Sia $F : \{0, 1\}^k \times \{0, 1\}^l \rightarrow \{0, 1\}^l$ una funzione pseudocasuale sicura. Siano inoltre $\alpha,\beta \in \{0, 1\}^l$  due stringhe di bit note. Vogliamo utilizzare F per costruire una funzione $G : \{0, 1\}^k \times \{0, 1\}^{2l} \rightarrow \{0, 1\}^l$ , nel seguente modo (il simbolo || denota l’operazione di concatenazione): 
 
 ```pseudocode
 G_k(x):
@@ -85,7 +85,7 @@ G_k(x):
 	return y
 ```
 
-###  Dimostrare formalmente che G non è una funzione pseudo-casuale sicura.
+#### Dimostrare formalmente che G non è una funzione pseudo-casuale sicura.
 
 Per dimostrare il fatto che $G_k$ non sia una funzione pseudo-casuale sicura deve essere possibile costruire un attacco che permetta ad un avversario con potenza di calcolo limitata di avere un vantaggio non trascurabile. Immaginiamo il seguente attacco:
 
@@ -94,14 +94,14 @@ A(G_k):
 	xL <- α
 	xR <- β
 	y <- O_{G_k}(xL || xR)
-	yL || yR = y // |yL| = |yR| = L
+	yL || yR = y /* |yL| = |yR| = L */
 	if yL = yR: return 1
 	else: return 0
 ```
 
 Grazie a questa costruzione, sappiamo che la funzione $G_k$ chiamerà $F_k$ passando la come input la stringa $0^l$ entrambe le volte, ottentendo quindi una stringa del tipo x || x, con  $x \in \{0, 1\}^l$ . 
 
-- **L'oracolo usa $G_k$:** la stringa possiede la caratterisca cercata ed A indovinerà sicuramente.
+- **L'oracolo usa $G_k$:** la stringa possiede la caratteristica cercata ed A indovinerà sicuramente.
 - **L'oracolo usa una funzione casuale:** la probabilità di essere tratti in inganno è $\frac{1}{2^l}$, che rappresenta la probabilità che l'output della funzione abbia la caratteristica che cerchiamo.
 
 $$
