add: aggiunta qualche terza itinere

--- a/Terza itinere/21-Giugno-2013.md
+++ b/Terza itinere/21-Giugno-2013.md
@@ -4,7 +4,7 @@
 
 Sia $\mathcal{IBE}=(\mathcal{Setup}, \mathcal{KeyDer}, \mathcal{Enc}, \mathcal{Dec})$ un cifrario basato sull'identità, e sia $A$ un avversario che tenta di attaccare $\mathcal{IBE}$ in senso **ind-id-cpa**. Il suo obiettivo è comprendere in quale dei due mondi si trova, restituendo un bit. 
 L'avversario ha a sua disposizione due oracoli: il primo, in grado restituire la cifratura di un messaggio usando la chiave che appartiene ad un utente a sua scelta. 
-Il secondo restituisce la coppia di chiavi privata di un utente qualsiasi. $A$ non può chiedere la chiave di un utente che userà per cifrare.
+Il secondo restituisce la chiave privata di un utente qualsiasi. $A$ non può chiedere la chiave di un utente che userà per cifrare.
 
 Viene definita le seguente coppia di esperimenti:
 
@@ -70,7 +70,7 @@ Sia $\mathcal{DS}=(\mathcal{KeyGen}, \mathcal{Sign}, \mathcal{VF})$ uno schema d
 
 Ad $A$ viene data la possibilità di consultare un oracolo di firma, in grado di produrre il tag relativo ad un messaggio scelto da $A$. Il compito dell'attaccante è quello di produrre una coppia (tag, messaggio) che risulti valida alla funzione $\mathcal{VF}$ con un messaggio che non ha precedentemente dato in input al primo oracolo. Si noti che $A$ non ha bisogno di un oracolo di verifica poiché possiede tutte le informazioni necessarie per eseguire autonomamente la funzione $\mathcal{VF}$
 
-Il tutto si può schematizzare con il seguente esperimento:
+Il tutto può essere formalizzato con il seguente esperimento:
 
 ```pseudocode
 ESP_{DF}^{uf-cma}:
@@ -87,7 +87,7 @@ ADV_{\mathcal{DF}}^{uf-cma}(A) = Pr[ESP_{\mathcal{DF}}^{uf-cma}(A) = 1]
 $$
 Lo schema di firma digitale è sicuro in senso **uf-cma** se tale vantaggio è prossimo a zero per ogni avversario polinomialmente limitato.
 
-### 4)
+### 4) Si dimostri che il seguente schema di firma non è sicuro (VEDERE COMPITO)
 
 Lo schema di firma digitale proposto può essere attaccato dal seguente avversario:
 
@@ -98,7 +98,7 @@ A(vk):
 	return ((m1, m2), (1, 1)) /* coppia di messaggi e coppia (randomness, tag) */
 ```
 
-Questo funziona a causa della costruzione della funzione $\mathcal{VF}$.
+Questo avversario ha vantaggio pari ad 1 a causa della costruzione della funzione $\mathcal{VF}$.
 $$
 \mathcal{VF}(vk, (m_1, m_2), (1, 1)) \\
 \text{Parametri:} \\
@@ -109,7 +109,7 @@ e_1 \leftarrow H(m_1), e_2 \leftarrow H(m_2) \\
 \sigma^{e_1e_2} \equiv R \mod N \Rightarrow 1^{e_1e_2} \equiv 1 \mod N
 $$
 
-### 5)
+### 5) Dimostrare che il cifrario non è sicuro in senso IND-CCA (VEDERE COMPITO)
 
 Il cifrario asimmetrico proposto può essere attaccato dal seguente avversario:
 
@@ -124,4 +124,4 @@ A(pk):
 		return 1
 ```
 
-Poiché $C_3 = e(g, h)^{sr}\cdot m$, ne segue che $m = 0 \Rightarrow C_3 = 0$
+Poiché $C_3 = e(g, h)^{sr}\cdot m$, ne segue che $m = 0 \Rightarrow C_3 = 0$. Questo avversario ha vantaggio pari a 1
